--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "pre-commit": [ "lint-check" ],
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -44,6 +45,7 @@
     "eslint-plugin-jest": "^24.3.6",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "pre-commit": "^1.2.2"
   }
 }
