--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "serve": "^11.3.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "lint-check": "eslint .",
-    "lint-fix": "eslint . --fix",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
+    "start": "serve -s build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint-check": "eslint .",
+    "lint-fix": "eslint . --fix"
   },
   "pre-commit": [
     "lint-check"
