--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-simple-pull-to-refresh": "^1.2.3",
     "serve": "^11.3.2",
     "web-vitals": "^1.0.1"
   },
